--- a/css/style.css
+++ b/css/style.css
@@ -20,9 +20,9 @@ body {
 }
 
 .navbar ul{
-  background-color: #e67300;
-  margin: 0;
-  padding: 0;
+  background-color: #a6a6a6;
+  margin: auto;
+  padding: 10px;
   overflow: hidden;
 }
 
@@ -45,6 +45,20 @@ body {
 .navbar a:hover{
   background-color: #29B6E6;
   border-bottom: 5px solid #29B6F6;
+}
 
+.content-wrapper {
+  padding-bottom: 20px;
+  position: relative;
+  width: 80%;
+  border-radius: 10px;
+  box-shadow: 0px 0px 30px 2px #999;
+  margin: 30px auto;
+  padding-bottom: 40px;
+  background: #ECEFF1;
+  font-family: 'Roboto Slab', serif;
+}
 
+.resumeTitle{
+  text-align: center;
 }
