--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,7 @@ body {
   position: relative;
   width: 80%;
   border-radius: 10px;
-  box-shadow: 0px 0px 30px 2px #999;
+  box-shadow: 0px 0px 20px 2px #999;
   margin: 30px auto;
   padding-bottom: 40px;
   background: #ECEFF1;
@@ -65,5 +65,13 @@ body {
 
 .content-wrapper section{
   margin: 10px 40px 30px 40px;
-  animation: fadein 0.5s;
+  animation: fadein 0.5s
+}
+
+.content-wrapper h2{
+  margin: 10px auto;
+  padding-bottom: 10px;
+  font-size: 25px;
+  font-weight: 700;
+  border-bottom: 1px solid #333;
 }
