--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,6 @@ body {
 }
 
 
-
 .navbar{
   position: relative;
   padding: 0.5rem 1rem;
@@ -103,7 +102,19 @@ body {
   float: right;
   position: relative;
   animation: fadein 2s;
-  margin-right: 30px;
+  margin-right: 20px;
+  border-radius: 10px;
+  box-shadow: 0px 0px 20px 2px #999;
+}
+
+.two{
+  display:block;
+  width: 25%;
+  height: 30%;
+  float: right;
+  position: relative;
+  animation: fadein 2s;
+  margin-right: 20px;
   border-radius: 10px;
   box-shadow: 0px 0px 20px 2px #999;
 }
@@ -118,4 +129,19 @@ body {
 
 .subsection p{
   font-family: 'Raleway', sans-serif;
+}
+
+.subsection h3{
+  font-size: 20px;
+}
+
+.bns-wrapper{
+  padding-bottom: 20px;
+  position: relative;
+  width: 80%;
+  border-radius: 10px;
+  box-shadow: 0px 0px 20px 2px #999;
+  margin: 30px auto;
+  padding-bottom: 40px;
+  background: #ECEFF1;
 }
