--- a/css/style.css
+++ b/css/style.css
@@ -145,3 +145,30 @@ body {
   padding-bottom: 40px;
   background: #ECEFF1;
 }
+
+.bns-wrapper h1{
+  text-align: center;
+  font-size: 3.5em;
+  font-family: 'Charmonman', cursive;
+}
+
+.subsection.comment{
+  font-size: 50px;
+}
+
+.subsection video{
+  width:auto;
+  height: auto;
+}
+
+.bnsimage{
+  display:block;
+  width: 30%;
+  height: 20%;
+  float: left;
+  position: relative;
+  animation: fadein 2s;
+  margin-right: 20px;
+  border-radius: 10px;
+  box-shadow: 0px 0px 20px 2px #999;
+}
