--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,7 @@
   list-style-type: none;
 
 }
-.navbar li a{
+.navbar a{
   display: inclineblock;
   text-align:center;
   text-decoration: none;
