--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,7 @@
   align-items: center;
   margin-left: auto;
   margin-right: auto;
+  text-align: center;
 }
 
 .navbar a.active{
@@ -35,6 +36,7 @@
   margin: auto;
   padding: 10px;
   overflow: hidden;
+  display: inline-block;
 }
 
 .navbar li{
