Change all special characters to utf-8 code and add custom css

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 /* css reset */
 html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+h1, h2, h3, h4, h5, h6, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
 del, dfn, em, img, ins, kbd, q, s, samp,
 small, strike, strong, sub, sup, tt, var,
@@ -111,6 +111,26 @@ time, mark, audio, video {
   font-size: 25px;
   font-weight: 700;
   border-bottom: 1px solid #333;
+}
+
+.resume-wrapper h3 {
+  display: block;
+  font-size: 1.17em;
+  -webkit-margin-before: 1__qem;
+  -webkit-margin-after: 1em;
+  -webkit-margin-start: 0;
+  -webkit-margin-end: 0;
+  font-weight: bold;
+}
+
+.resume-wrapper ul{
+  display: block;
+  list-style-type: disc;
+  -webkit-margin-before: 1__qem;
+  -webkit-margin-after: 1em;
+  -webkit-margin-start: 0;
+  -webkit-margin-end: 0;
+  -webkit-padding-start: 40px;
 }
 
 .index-wrapper{
